export const snapshot = {};

snapshot[`planner 1`] = `
[
  {
    id: "one",
    node: "one",
    path: [
      "one",
    ],
    type: {
      title: "function_46",
      type: "function",
    },
  },
  {
    id: "one.id",
    node: "id",
    path: [
      "one",
      "id",
    ],
    type: {
      format: "uuid",
      title: "string_9",
      type: "string",
    },
  },
  {
    id: "one.email",
    node: "email",
    path: [
      "one",
      "email",
    ],
    type: {
      format: "email",
      title: "string_10",
      type: "string",
    },
  },
  {
    id: "one.nested",
    node: "nested",
    path: [
      "one",
      "nested",
    ],
    type: {
      title: "object_16",
      type: "object",
    },
  },
  {
    id: "one.nested.first",
    node: "first",
    path: [
      "one",
      "nested",
      "first",
    ],
    type: {
      title: "string_11",
      type: "string",
    },
  },
  {
    id: "one.nested.second",
    node: "second",
    path: [
      "one",
      "nested",
      "second",
    ],
    type: {
      title: "array_13",
      type: "array",
    },
  },
  {
    id: "one.nested.third",
    node: "third",
    path: [
      "one",
      "nested",
      "third",
    ],
    type: {
      title: "optional_15",
      type: "optional",
    },
  },
]
`;

snapshot[`planner 2`] = `
{
  one: {
    funcType: {
      as_id: false,
      config: {},
      input: 2,
      materializer: 1,
      output: 3,
      policies: [
        0,
      ],
      rate_calls: false,
      rate_weight: null,
      runtime: 0,
      title: "function_46",
      type: "function",
    },
    referencedTypes: {
      "one.email": [
        {
          title: "string_10",
          type: "string",
        },
      ],
      "one.id": [
        {
          title: "string_9",
          type: "string",
        },
      ],
      "one.nested": [
        {
          title: "object_16",
          type: "object",
        },
      ],
      "one.nested.first": [
        {
          title: "string_11",
          type: "string",
        },
      ],
      "one.nested.second": [
        {
          title: "array_13",
          type: "array",
        },
        {
          title: "float_12",
          type: "float",
        },
      ],
      "one.nested.third": [
        {
          title: "optional_15",
          type: "optional",
        },
        {
          title: "boolean_14",
          type: "boolean",
        },
      ],
      one: [
        {
          title: "function_46",
          type: "function",
        },
        {
          title: "object_31",
          type: "object",
        },
        {
          title: "object_45",
          type: "object",
        },
      ],
    },
  },
}
`;

snapshot[`planner 3`] = `
[
  "one  one  one  object  object_31  false",
  "one.union1  union1  one/union1  union  Union1  false",
  "one.union2  union2  one/union2  union  Union2  false",
  "one.union2\$A.a  a  one/union2\$A/a  integer  integer_1  false",
  "one.union2\$B.b  b  one/union2\$B/b  either  either_7  false",
  "one.union2\$B.b\$C1.c  c  one/union2\$B/b\$C1/c  integer  integer_3  false",
  "one.union2\$B.b\$C2.c  c  one/union2\$B/b\$C2/c  string  string_5  false",
]
`;

snapshot[`planner 4`] = `
[
  "one  one  one  object  object_31  false",
  "one.union2  union2  one/union2  union  Union2  true",
  "one.union2\$A.a  a  one/union2\$A/a  integer  integer_1  false",
  "one.union2\$B.b  b  one/union2\$B/b  either  either_7  false",
  "one.union2\$B.b\$C1.c  c  one/union2\$B/b\$C1/c  integer  integer_3  false",
  "one.union2\$B.b\$C2.c  c  one/union2\$B/b\$C2/c  string  string_5  false",
  "one.from_union2  from_union2  one/from_union2  integer  integer_25  false",
  "one.union1  union1  one/union1  union  Union1  true",
  "one.from_union1  from_union1  one/from_union1  integer  integer_21  false",
]
`;

snapshot[`planner: dependencies 1`] = `
[
  "two  two  two  object  object_64  false",
  "two.id  id  two/id  integer  integer_48  false",
  "two.email  email  two/email  string  UserEmail  false",
]
`;

snapshot[`planner: dependencies 2`] = `
[
  "two  two  two  object  object_64  false",
  "two.id  id  two/id  integer  integer_48  false",
  "two.email  email  two/email  string  UserEmail  false",
  "two.profile  profile  two/profile  object  object_56  false",
  "two.profile.firstName  firstName  two/profile/firstName  string  string_53  false",
  "two.profile.lastName  lastName  two/profile/lastName  string  string_54  false",
  "two.profile.profilePic  profilePic  two/profile/profilePic  string  string_55  false",
]
`;

snapshot[`planner: dependencies 3`] = `
[
  "two  two  two  object  object_64  false",
  "two.id  id  two/id  integer  integer_48  false",
  "two.email  email  two/email  string  UserEmail  false",
  "two.profile  profile  two/profile  object  object_56  false",
  "two.profile.firstName  firstName  two/profile/firstName  string  string_53  false",
  "two.profile.lastName  lastName  two/profile/lastName  string  string_54  false",
  "two.profile.profilePic  profilePic  two/profile/profilePic  string  string_55  false",
]
`;

snapshot[`planner: dependencies 4`] = `
[
  "two  two  two  object  object_64  false",
  "two.email  email  two/email  string  UserEmail  true",
  "two.profile  profile  two/profile  object  object_56  false",
  "two.profile.firstName  firstName  two/profile/firstName  string  string_53  false",
  "two.profile.lastName  lastName  two/profile/lastName  string  string_54  false",
  "two.profile.profilePic  profilePic  two/profile/profilePic  string  string_55  false",
  "two.id  id  two/id  integer  integer_48  false",
]
`;

snapshot[`planner: dependencies 5`] = `
[
  "two  two  two  object  object_64  false",
  "two.email  email  two/email  string  UserEmail  true",
  "two.profile  profile  two/profile  object  object_56  false",
  "two.profile.firstName  firstName  two/profile/firstName  string  string_53  false",
  "two.profile.lastName  lastName  two/profile/lastName  string  string_54  false",
  "two.profile.profilePic  profilePic  two/profile/profilePic  string  string_55  false",
  "two.taggedPic  taggedPic  two/taggedPic  string  string_62  false",
]
`;

snapshot[`planner: dependencies 6`] = `
[
  "two  two  two  object  object_64  false",
  "two.id  id  two/id  integer  integer_48  false",
  "two.email  email  two/email  string  UserEmail  true",
  "two.profile  profile  two/profile  object  object_56  true",
  "two.profile.email  email  two/profile/email  string  string_52  false",
  "two.profile.firstName  firstName  two/profile/firstName  string  string_53  false",
  "two.profile.lastName  lastName  two/profile/lastName  string  string_54  false",
  "two.profile.profilePic  profilePic  two/profile/profilePic  string  string_55  false",
  "two.taggedPic  taggedPic  two/taggedPic  string  string_62  false",
]
`;

snapshot[`planner: dependencies in union/either 1`] = `
[
  "three  three  three  object  object_69  false",
  "three.id  id  three/id  integer  integer_67  false",
  "three.user  user  three/user  either  either_68  false",
  "three.user\$RegisteredUser.id  id  three/user\$RegisteredUser/id  string  string_32  false",
  "three.user\$RegisteredUser.email  email  three/user\$RegisteredUser/email  string  RegisteredUserEmail  false",
  "three.user\$RegisteredUser.profile  profile  three/user\$RegisteredUser/profile  object  object_39  false",
  "three.user\$RegisteredUser.profile.email  email  three/user\$RegisteredUser/profile/email  string  string_36  false",
  "three.user\$RegisteredUser.profile.displayName  displayName  three/user\$RegisteredUser/profile/displayName  string  string_37  false",
  "three.user\$RegisteredUser.profile.profilePic  profilePic  three/user\$RegisteredUser/profile/profilePic  string  string_38  false",
  "three.user\$GuestUser.id  id  three/user\$GuestUser/id  string  string_42  false",
]
`;

snapshot[`planner: dependencies in union/either 2`] = `
[
  "three  three  three  object  object_69  false",
  "three.id  id  three/id  integer  integer_67  false",
  "three.user  user  three/user  either  either_68  false",
  "three.user\$RegisteredUser.id  id  three/user\$RegisteredUser/id  string  string_32  false",
  "three.user\$RegisteredUser.email  email  three/user\$RegisteredUser/email  string  RegisteredUserEmail  true",
  "three.user\$RegisteredUser.profile  profile  three/user\$RegisteredUser/profile  object  object_39  false",
  "three.user\$RegisteredUser.profile.email  email  three/user\$RegisteredUser/profile/email  string  string_36  false",
  "three.user\$RegisteredUser.profile.displayName  displayName  three/user\$RegisteredUser/profile/displayName  string  string_37  false",
  "three.user\$GuestUser.id  id  three/user\$GuestUser/id  string  string_42  false",
]
`;
